Fix background overlap bug

--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -338,7 +338,7 @@ section
 		&.covered 
 
 			.edge.right, .edge.left
-				width: 50%
+				width: 51% // 1% extra to guarantee overlap
 
 			.page-label
 				opacity: 0.5
